--- a/style.css
+++ b/style.css
@@ -6,24 +6,85 @@
 body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  /* background-color: aquamarine; */
-  height: 100vh;
+    height: 100vh;
+  
 }
+.startPage{
+  line-height: 2rem;
+  padding: 1rem;
+  
+  h1{
+    text-align: center;
+    padding: 2rem;
+  }
+  h2{
+    margin-top: 2rem;
+    color: red;
+  }
+  h3{
+    margin-top: 2rem;
+  }
+  
+  .startPage__choseName{
+    border: 2px solid black;
+    display: flex;
+    justify-content: center;
+    padding: 2rem 0;
+    input{
+      margin: 0 1rem;
+    }
+    button{
+      padding: 0.5rem;
+      background-color: wheat;
+      border-radius: 1rem;
+      cursor: pointer;
+    }
+  }
+
+  .startPage__startGame{
+    border: 2px solid black;
+    display: flex;
+    justify-content: center;
+    padding: 2rem 0;
+    button{
+      padding: 0.5rem;
+      background-color: wheat;
+      border-radius: 1rem;
+      cursor: pointer;
+    }
+  }
+
+}
+.gameOverPage{
+  padding: 3rem;
+  display: none;
+  justify-content: center;
+  align-items: center;
+   button {
+    margin-left: 1rem;
+    padding: 0.5rem;
+  }
+  
+}
+
+
 .container {
-  /* background-color: antiquewhite; */
-  display: grid;
+  display: none;
   grid-template-columns: 1fr 3fr 1fr;
   height: 100%;
 }
 
 .container__dogStatus {
-  background-color: rgb(100, 100, 227);
   display: flex;
   flex-direction: column;
   justify-content: center;
   p {
+    margin: 1rem;
+    padding: .5rem;
+    border: 2px solid black;
     font-size: 2rem;
-    margin-top: 2rem;
+
+   
   }
 }
 
@@ -31,15 +92,50 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  .container__dog__thoughts{
+    border-radius: 0 0 0 1rem;
+    box-shadow: 0 0 2px 2px black;
+    position: relative;
+    bottom: 7rem;
+    padding: 0.5rem;
+  }
+  #dogThoughts{
+    width: 50px;
+    
+  }
+  
+}
+
+.container__dog__message{
+  border: 2px solid black;
+  padding: 1rem;
+  p{
+    font-weight: bold;
+  }
 }
 
 .container__buttons {
-  background-color: azure;
   display: flex;
   flex-direction: column;
   justify-content: center;
 
   button {
     margin-top: 1rem;
+   padding: 0.5rem;
+
+  }
+  .container__buttons__action{
+    border: 2px solid black;
+    display: flex;
+    flex-direction: column;
+    padding: 1rem;
+    margin: 1rem;
+  }
+  .container__buttons__buy{
+    border: 2px solid black;
+    display: flex;
+    flex-direction: column;
+    padding: 1rem;
+    margin: 1rem;
   }
 }
